redisをondemand nodeにのせない

--- a/k8s/apps/redis/helm.yaml
+++ b/k8s/apps/redis/helm.yaml
@@ -40,7 +40,15 @@ spec:
           memory: 100Mi
       serviceAccount:
         create: false
-
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: walnuts.dev/ondemand
+                operator: NotIn
+                values:
+                - "true"
     replica:
       replicaCount: 3
       persistence:
