redisをondemand nodeにのせない 2

--- a/k8s/apps/redis/helm.yaml
+++ b/k8s/apps/redis/helm.yaml
@@ -68,7 +68,15 @@ spec:
           memory: 100Mi
       serviceAccount:
         create: false
-
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: walnuts.dev/ondemand
+                operator: NotIn
+                values:
+                - "true"
     sentinel:
       enabled: true
       masterSet: mymaster
