--- a/k8s/apps/redis/helm.yaml
+++ b/k8s/apps/redis/helm.yaml
@@ -60,7 +60,7 @@ spec:
           - weight: 10
             preference:
               matchExpressions:
-                - key: kubernetes.iohostname
+                - key: kubernetes.io/hostname
                   operator: NotIn
                   values:
                     - donut
@@ -103,7 +103,7 @@ spec:
           - weight: 10
             preference:
               matchExpressions:
-                - key: kubernetes.iohostname
+                - key: kubernetes.io/hostname
                   operator: NotIn
                   values:
                     - donut
