--- a/k8s/apps/walnuts-dev/deployment.yaml
+++ b/k8s/apps/walnuts-dev/deployment.yaml
@@ -40,7 +40,7 @@ spec:
             - weight: 10
               preference:
                 matchExpressions:
-                  - key: kubernetes.iohostname
+                  - key: kubernetes.io/hostname
                     operator: NotIn
                     values:
                       - donut
