--- a/k8s/apps/postgresql-default/postgresql.yaml
+++ b/k8s/apps/postgresql-default/postgresql.yaml
@@ -68,3 +68,10 @@ spec:
             operator: In
             values:
               - amd64
+    - weight: 10
+      preference:
+        matchExpressions:
+          - key: kubernetes.io/hostname
+            operator: NotIn
+            values:
+              - donut
