--- a/k8s/apps/code-server/codeserver.yaml
+++ b/k8s/apps/code-server/codeserver.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       storageSize: 3Gi
       storageClassName: local-path
-      initCommand: 'cd work && go mod tidy'
+      initCommand: 'cd work && export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && npm install'
       initPlugins:
         git:
           repourl: "github.com/walnuts1018/panda-downloader"
