--- a/k8s/apps/smartctl-exporter/helm.yaml
+++ b/k8s/apps/smartctl-exporter/helm.yaml
@@ -19,3 +19,7 @@ spec:
     image:
       repository: ghcr.io/joryirving/smartctl_exporter
       tag: "0.12.0"
+    annotations:
+      prometheus.io/scrape: "true"
+      prometheus.io/port: "9666"
+      prometheus.io/path: "/metrics"
