--- a/k8s/apps/prometheus-operator/helm.yaml
+++ b/k8s/apps/prometheus-operator/helm.yaml
@@ -29,6 +29,7 @@ spec:
         enabled: true
         hosts:
           - grafana.walnuts.dev
+        ingressClassName: nginx
       rbac:
         pspEnabled: false
       testFramework:
