--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -94,5 +94,6 @@ spec:
       prometheus:
         monitor:
           relabelings:
-          - sourceLabels: [__meta_kubernetes_node_name]
+          - action: replace
+            sourceLabels: [__meta_kubernetes_node_name]
             targetLabel: node
