--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -92,7 +92,7 @@ spec:
     prometheus-node-exporter:
       prometheus:
         monitor:
-          relabelings:
+          metricRelabelings:
           - action: replace
             sourceLabels: [__meta_kubernetes_node_name]
             targetLabel: node
