--- a/k8s/apps/misskey/default.yml
+++ b/k8s/apps/misskey/default.yml
@@ -5,12 +5,12 @@ db:
   port: 5432
   db: misskey
   user: misskey
-  pass: {? {.misskeydbpassword: ''} : ''}
+  pass: "{{ .misskeydbpassword }}"
 dbReplications: false
 redis:
   host: redis-haproxy.databases.svc.cluster.local
   port: 6379
-  pass: {? {.redispassword: ''} : ''}
+  pass: "{{ .redispassword }}"
   db: 1
 id: 'aidx'
 proxyBypassHosts:
