--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -92,7 +92,10 @@ spec:
     prometheus-node-exporter:
       prometheus:
         monitor:
-          metricRelabelings:
-          - action: replace
-            sourceLabels: [__meta_kubernetes_node_name]
+          relabelings:
+          - sourceLabels: [__meta_kubernetes_pod_node_name]
+            separator: ;
+            regex: ^(.*)$
             targetLabel: node
+            replacement: $1
+            action: replace
