--- a/k8s/apps/ac-hacking-2024/back/deployment.yaml
+++ b/k8s/apps/ac-hacking-2024/back/deployment.yaml
@@ -17,11 +17,7 @@ spec:
         image: ghcr.io/walnuts1018/2024-ac-hacking:1c4c5593eb14f8656449d2176c177ca20679ef56-11 # {"$imagepolicy": "ac-hacking-2024:ac-hacking-2024-back"}
         ports:
         - containerPort: 8080
-        resources:
-          limits:
-            memory: 512Mi
-          requests:
-            memory: 5Mi
+        resources: {}
         env:
         - name: PSQL_HOST
           value: "postgresql-default.databases.svc.cluster.local"
