--- a/k8s/apps/ac-hacking-2024/front/deployment.yaml
+++ b/k8s/apps/ac-hacking-2024/front/deployment.yaml
@@ -17,10 +17,6 @@ spec:
         image: ghcr.io/walnuts1018/2024-ac-hacking-front:1c4c5593eb14f8656449d2176c177ca20679ef56-11 # {"$imagepolicy": "ac-hacking-2024:ac-hacking-2024-front"}
         ports:
         - containerPort: 3000
-        resources:
-          limits:
-            memory: 512Mi
-          requests:
-            memory: 30Mi
+        resources: {}
       nodeSelector:
         kubernetes.io/arch: amd64
