--- a/k8s/apps/external-dns/deployment.yaml
+++ b/k8s/apps/external-dns/deployment.yaml
@@ -32,10 +32,6 @@ spec:
           value: 38b5eab012d216dfcc52dcd69e7764b5
         - name: CF_TUNNEL_ID
           value: 4262dac3-569f-46ac-aa3a-b1397fb8d012
-        resources:
-          requests:
-            memory: 32Mi
-          limits:
-            memory: 512Mi
+        resources: {}
       nodeSelector:
         kubernetes.io/arch: amd64
