--- a/k8s/apps/fitbit-manager/deployment.yaml
+++ b/k8s/apps/fitbit-manager/deployment.yaml
@@ -20,11 +20,7 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
-        resources:
-          limits:
-            memory: 100Mi
-          requests:
-            memory: 10Mi
+        resources: {}
         env:
         - name: GIN_MODE
           value: "release"
