--- a/k8s/apps/hedgedoc/deployment.yaml
+++ b/k8s/apps/hedgedoc/deployment.yaml
@@ -20,11 +20,7 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3000
-        resources:
-          limits:
-            memory: 300Mi
-          requests:
-            memory: 100Mi
+        resources: {}
         env:
         - name: CMD_LOGLEVEL
           value: "debug"
