--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -20,8 +20,4 @@ spec:
         ports:
         - name: http
           containerPort: 8080
-        resources:
-          limits:
-            memory: 100Mi
-          requests:
-            memory: 10Mi
+        resources: {}
