--- a/k8s/apps/kibana/deployment.yaml
+++ b/k8s/apps/kibana/deployment.yaml
@@ -25,8 +25,4 @@ spec:
           value: "http://elasticsearch.databases.svc.cluster.local:9200"
           #- name: SERVER_PUBLICBASEURL
         #  value: "https://kibana.walnuts.dev"
-        resources:
-          limits:
-            memory: 1024Mi
-          requests:
-            memory: 350Mi
+        resources: {}
