--- a/k8s/apps/krakend/deployment.yaml
+++ b/k8s/apps/krakend/deployment.yaml
@@ -37,11 +37,7 @@ spec:
         env:
         - name: KRAKEND_PORT
           value: "8080"
-        resources:
-          limits:
-            memory: 512Mi
-          requests:
-            memory: 50Mi
+        resources: {}
       volumes:
       - name: config
         configMap:
