--- a/k8s/apps/openchokin/front/deployment.yaml
+++ b/k8s/apps/openchokin/front/deployment.yaml
@@ -20,11 +20,7 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3000
-        resources:
-          requests:
-            memory: 100Mi
-          limits:
-            memory: 512Mi
+        resources: {}
         env:
         - name: ZITADEL_URL
           value: "https://auth.walnuts.dev"
