--- a/k8s/apps/y-2024/deployment.yaml
+++ b/k8s/apps/y-2024/deployment.yaml
@@ -18,11 +18,7 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
-        resources:
-          limits:
-            memory: 512Mi
-          requests:
-            memory: 32Mi
+        resources: {}
         env:
         - name: PSQL_HOST
           value: "postgresql-default.databases.svc.cluster.local"
