--- a/k8s/apps/ac-hacking-2024/front/deployment.yaml
+++ b/k8s/apps/ac-hacking-2024/front/deployment.yaml
@@ -18,8 +18,7 @@ spec:
         ports:
         - containerPort: 3000
         resources:
-          limits:
-            memory: 512Mi
+          limits: {}
           requests:
             memory: 30Mi
       nodeSelector:
