--- a/k8s/apps/external-dns/deployment.yaml
+++ b/k8s/apps/external-dns/deployment.yaml
@@ -35,7 +35,6 @@ spec:
         resources:
           requests:
             memory: 32Mi
-          limits:
-            memory: 512Mi
+          limits: {}
       nodeSelector:
         kubernetes.io/arch: amd64
