--- a/k8s/apps/hedgedoc/deployment.yaml
+++ b/k8s/apps/hedgedoc/deployment.yaml
@@ -21,8 +21,7 @@ spec:
         ports:
         - containerPort: 3000
         resources:
-          limits:
-            memory: 300Mi
+          limits: {}
           requests:
             memory: 100Mi
         env:
