--- a/k8s/apps/oekaki-dengon-game/back/deployment.yaml
+++ b/k8s/apps/oekaki-dengon-game/back/deployment.yaml
@@ -62,5 +62,4 @@ spec:
         resources:
           requests:
             memory: 10Mi
-          limits:
-            memory: 1Gi
+          limits: {}
