--- a/k8s/apps/oekaki-dengon-game/front/deployment.yaml
+++ b/k8s/apps/oekaki-dengon-game/front/deployment.yaml
@@ -26,8 +26,7 @@ spec:
         - name: API_URL
           value: "http://oekaki-dengon-game-back.default.svc.cluster.local:8080/api"
         resources:
-          limits:
-            memory: 512Mi
+          limits: {}
           requests:
             memory: 160Mi
       nodeSelector:
