--- a/k8s/apps/openchokin/back/deployment.yaml
+++ b/k8s/apps/openchokin/back/deployment.yaml
@@ -46,5 +46,4 @@ spec:
         resources:
           requests:
             memory: 10Mi
-          limits:
-            memory: 512Mi
+          limits: {}
