--- a/k8s/apps/walnuts-dev/deployment.yaml
+++ b/k8s/apps/walnuts-dev/deployment.yaml
@@ -22,7 +22,8 @@ spec:
         - containerPort: 3000
         resources:
           limits: {}
-          requests: {}
+          requests:
+            memory: 100Mi
         env:
         - name: NEXT_PUBLIC_GA_ID
           value: G-NB6F68ZQ9P
