--- a/k8s/apps/ac-hacking-2024/back/deployment.yaml
+++ b/k8s/apps/ac-hacking-2024/back/deployment.yaml
@@ -18,10 +18,9 @@ spec:
         ports:
         - containerPort: 8080
         resources:
-          limits:
-            memory: 512Mi
           requests:
             memory: 5Mi
+          limits: {}
         env:
         - name: PSQL_HOST
           value: "postgresql-default.databases.svc.cluster.local"
