--- a/k8s/apps/fitbit-manager/deployment.yaml
+++ b/k8s/apps/fitbit-manager/deployment.yaml
@@ -21,8 +21,7 @@ spec:
         ports:
         - containerPort: 8080
         resources:
-          limits:
-            memory: 100Mi
+          limits: {}
           requests:
             memory: 10Mi
         env:
