--- a/k8s/apps/github-readme-stats/deployment.yaml
+++ b/k8s/apps/github-readme-stats/deployment.yaml
@@ -19,8 +19,7 @@ spec:
         ports:
         - containerPort: 80
         resources:
-          limits:
-            memory: 200Mi
+          limits: {}
           requests:
             memory: 32Mi
         env:
