--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -21,7 +21,6 @@ spec:
         - name: http
           containerPort: 8080
         resources:
-          limits:
-            memory: 100Mi
+          limits: {}
           requests:
             memory: 10Mi
