--- a/k8s/apps/krakend/deployment.yaml
+++ b/k8s/apps/krakend/deployment.yaml
@@ -38,8 +38,7 @@ spec:
         - name: KRAKEND_PORT
           value: "8080"
         resources:
-          limits:
-            memory: 512Mi
+          limits: {}
           requests:
             memory: 50Mi
       volumes:
