--- a/k8s/apps/machine-status-api/deployment.yaml
+++ b/k8s/apps/machine-status-api/deployment.yaml
@@ -41,8 +41,7 @@ spec:
         resources:
           requests:
             memory: "10Mi"
-          limits:
-            memory: "512Mi"
+          limits: {}
       priorityClassName: high
       nodeSelector:
         kubernetes.io/hostname: snow
