--- a/k8s/apps/proxmox-webui/deployment.yaml
+++ b/k8s/apps/proxmox-webui/deployment.yaml
@@ -27,8 +27,7 @@ spec:
         - mountPath: /var/log/nginx
           name: log
         resources:
-          limits:
-            memory: 100Mi
+          limits: {}
           requests:
             memory: 5Mi
       volumes:
