--- a/k8s/apps/redis-haproxy/deployment.yaml
+++ b/k8s/apps/redis-haproxy/deployment.yaml
@@ -38,8 +38,7 @@ spec:
         resources:
           requests:
             memory: 50Mi
-          limits:
-            memory: 100Mi
+          limits: {}
       volumes:
       - name: config
         secret:
