--- a/k8s/apps/sweets-rebellion/deployment.yaml
+++ b/k8s/apps/sweets-rebellion/deployment.yaml
@@ -27,8 +27,7 @@ spec:
         - mountPath: /var/log/nginx
           name: log
         resources:
-          limits:
-            memory: 512Mi
+          limits: {}
           requests:
             memory: 10Mi
       imagePullSecrets:
