--- a/k8s/apps/y-2024/deployment.yaml
+++ b/k8s/apps/y-2024/deployment.yaml
@@ -19,8 +19,7 @@ spec:
         ports:
         - containerPort: 8080
         resources:
-          limits:
-            memory: 512Mi
+          limits: {}
           requests:
             memory: 32Mi
         env:
