add misskey vpa

--- a/k8s/apps/misskey/deployment.yaml
+++ b/k8s/apps/misskey/deployment.yaml
@@ -58,8 +58,7 @@ spec:
         resources:
           requests:
             memory: 512Mi
-          limits:
-            memory: 1Gi
+          limits: {}
       volumes:
       - name: misskey-pv
         persistentVolumeClaim:
