--- a/k8s/apps/misskey/kustomization.yaml
+++ b/k8s/apps/misskey/kustomization.yaml
@@ -14,3 +14,5 @@ configMapGenerator:
   - default.yml
 generatorOptions:
   disableNameSuffixHash: true
+components:
+- ../../components/deployment-with-vpa
