add serviceMonitorSelectorNilUsesHelmValues: false

--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -97,3 +97,6 @@ spec:
             targetLabel: node
             replacement: $1
             action: replace
+    prometheus:
+      prometheusSpec:
+        serviceMonitorSelectorNilUsesHelmValues: false
