smartctl exporter: add relabelings

--- a/k8s/apps/smartctl-exporter/helm.yaml
+++ b/k8s/apps/smartctl-exporter/helm.yaml
@@ -24,3 +24,10 @@ spec:
       prometheus.io/path: "/metrics"
     serviceMonitor:
       enabled: true
+      relabelings:
+      - sourceLabels: [__meta_kubernetes_pod_node_name]
+        separator: ;
+        regex: ^(.*)$
+        targetLabel: node
+        replacement: $1
+        action: replace
