--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -100,3 +100,11 @@ spec:
     prometheus:
       prometheusSpec:
         serviceMonitorSelectorNilUsesHelmValues: false
+        storageSpec:
+          volumeClaimTemplate:
+            spec:
+              storageClassName: longhorn
+              accessModes: ["ReadWriteOnce"]
+              resources:
+                requests:
+                  storage: 20Gi
