--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -109,5 +109,5 @@ spec:
                 requests:
                   storage: 32Gi
         retention: 14d
-        retentionSize: 30Gi
+        retentionSize: 30GiB
         replicas: 2
