--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -103,7 +103,7 @@ spec:
         storageSpec:
           volumeClaimTemplate:
             spec:
-              storageClassName: local-path
+              storageClassName: longhorn-local
               accessModes: ["ReadWriteOnce"]
               resources:
                 requests:
