--- a/k8s/apps/redis/helm.yaml
+++ b/k8s/apps/redis/helm.yaml
@@ -24,7 +24,7 @@ spec:
       kind: StatefulSet
       persistence:
         enabled: true
-        storageClass: "local-path"
+        storageClass: "longhorn-local"
         size: 512Mi
       service:
         type: LoadBalancer
@@ -65,7 +65,7 @@ spec:
       replicaCount: 3
       persistence:
         enabled: true
-        storageClass: "local-path"
+        storageClass: "longhorn-local"
         size: 512Mi
       service:
         type: ClusterIP
@@ -108,7 +108,7 @@ spec:
       quorum: 2
       persistence:
         enabled: true
-        storageClass: "local-path"
+        storageClass: "longhorn-local"
         size: 100Mi
       service:
         type: ClusterIP
