fix otel operator

--- a/k8s/apps/opentelemetry-operator/helm.yaml
+++ b/k8s/apps/opentelemetry-operator/helm.yaml
@@ -15,4 +15,6 @@ spec:
       chart: opentelemetry-operator
       version: 0.62.0
   values:
-
+    manager:
+      collectorImage:
+        repository: "otel/opentelemetry-collector-k8s"
