--- a/k8s/apps/openobserve-collector/helm.yaml
+++ b/k8s/apps/openobserve-collector/helm.yaml
@@ -3,7 +3,7 @@ kind: HelmRepository
 metadata:
   name: openobserve-collector
 spec:
-  url: https://open-telemetry.github.io/opentelemetry-helm-charts
+  url: https://charts.openobserve.ai
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
