--- a/k8s/namespaces/namespaces.yaml
+++ b/k8s/namespaces/namespaces.yaml
@@ -92,3 +92,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: opentelemetry-operator-system
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: openobserve-collector
