--- a/k8s/namespaces/namespaces.yaml
+++ b/k8s/namespaces/namespaces.yaml
@@ -97,3 +97,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: openobserve-collector
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: openobserve
