--- a/k8s/apps/openobserve/externalsecret.yaml
+++ b/k8s/apps/openobserve/externalsecret.yaml
@@ -13,9 +13,19 @@ spec:
       engineVersion: v2
       type: Opaque
       data:
+        ZO_S3_ACCESS_KEY: '{{ .minio_access_key }}'
+        ZO_S3_SECRET_KEY: '{{ .minio_secret_key }}'
         ZO_ROOT_USER_EMAIL: "openobserve@walnuts.dev"
         ZO_ROOT_USER_PASSWORD: '{{ .root_user_password }}'
   data:
+  - secretKey: minio_access_key
+    remoteRef:
+      key: openobserve
+      property: minio_access_key
+  - secretKey: minio_secret_key
+    remoteRef:
+      key: openobserve
+      property: minio_secret_key
   - secretKey: root_user_password
     remoteRef:
       key: openobserve
