--- a/k8s/apps/openobserve-collector/helm.yaml
+++ b/k8s/apps/openobserve-collector/helm.yaml
@@ -19,7 +19,7 @@ spec:
     name: openobserve-collector
     valuesKey: authorization
     targetPath: "exporters.otlphttp/openobserve.headers.Authorization"
-  - kind: z
+  - kind: Secret
     name: openobserve-collector
     valuesKey: authorization
     targetPath: "exporters.otlphttp/openobserve_k8s_events.headers.Authorization"
