--- a/k8s/apps/openobserve-collector/helm.yaml
+++ b/k8s/apps/openobserve-collector/helm.yaml
@@ -27,7 +27,7 @@ spec:
     exporters:
       otlphttp/openobserve:
         endpoint: https://openobserve.walnuts.dev/api/default/
-        headers:
+        headers: {}
       otlphttp/openobserve_k8s_events:
         endpoint: https://openobserve.walnuts.dev/api/default/
         headers:
