--- a/k8s/apps/opentelemetry-operator/helm.yaml
+++ b/k8s/apps/opentelemetry-operator/helm.yaml
@@ -18,3 +18,8 @@ spec:
     manager:
       collectorImage:
         repository: "otel/opentelemetry-collector-k8s"
+    admissionWebhooks:
+      certManager:
+        enabled: false
+      autoGenerateCert:
+        enabled: true
