--- a/k8s/apps/opentelemetry-collectors/externalsecret.yaml
+++ b/k8s/apps/opentelemetry-collectors/externalsecret.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: openobserve-collector
+  name: openobserve-authorization
 spec:
   secretStoreRef:
     name: vault-secretstore
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: openobserve-collector
+    name: openobserve-authorization
     template:
       engineVersion: v2
       type: Opaque
