--- a/k8s/apps/opentelemetry-collectors/kustomization.yaml
+++ b/k8s/apps/opentelemetry-collectors/kustomization.yaml
@@ -1,8 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: openobserve-collector
-components:
-- ../../components/helm
+namespace: opentelemetry-collector
 resources:
-- helm.yaml
 - externalsecret.yaml
+- ./otel-collector
+- ./otel-collector-cluster
