--- a/k8s/apps/opentelemetry-collectors/otel-collector/helm.yaml
+++ b/k8s/apps/opentelemetry-collectors/otel-collector/helm.yaml
@@ -1,14 +1,14 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: opentelemetry-collector
+  name: otel-collector
 spec:
   url: https://open-telemetry.github.io/opentelemetry-helm-charts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: opentelemetry-collector
+  name: otel-collector
 spec:
   chart:
     spec:
