--- a/k8s/components/deployment-with-hpa/hpa.yaml
+++ b/k8s/components/deployment-with-hpa/hpa.yaml
@@ -10,7 +10,7 @@ spec:
   minReplicas: 2
   maxReplicas: 10
   metrics:
-  - type: PodResource
+  - type: Resource
     resource:
       name: cpu
       target:
