--- a/k8s/components/deployment-with-hpa/kustomization.yaml
+++ b/k8s/components/deployment-with-hpa/kustomization.yaml
@@ -12,3 +12,7 @@ replacements:
     fieldPaths:
     - metadata.name
     - spec.scaleTargetRef.name
+patches:
+- path: rm-replicas.yaml
+  target:
+    kind: Deployment
