--- a/k8s/apps/oekaki-dengon-game-oauth2-proxy/helm.yaml
+++ b/k8s/apps/oekaki-dengon-game-oauth2-proxy/helm.yaml
@@ -78,6 +78,8 @@ spec:
 
     resources:
       limits:
-        memory: 128Mi
+        cpu: 500m
+        memory: 512Mi
       requests:
+        cpu: 10m
         memory: 10Mi
