--- a/k8s/apps/opentelemetry-collectors/otel-collector/kustomization.yaml
+++ b/k8s/apps/opentelemetry-collectors/otel-collector/kustomization.yaml
@@ -1,6 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-components:
-- ../../../components/helm
 resources:
-- helm.yaml
+- otel-collector.yaml
