--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -24,3 +24,8 @@ spec:
           limits: {}
           requests:
             memory: 10Mi
+      env:
+      - name: OTEL_EXPORTER_OTLP_INSECURE
+        value: "true"
+      - name: OTEL_EXPORTER_OTLP_ENDPOINT
+        value: "http://─default-collector.opentelemetry-collector.svc.cluster.local:4317"
