--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -28,4 +28,4 @@ spec:
       - name: OTEL_EXPORTER_OTLP_INSECURE
         value: "true"
       - name: OTEL_EXPORTER_OTLP_ENDPOINT
-        value: "http://─default-collector.opentelemetry-collector.svc.cluster.local:4317"
+        value: "http://default-collector.opentelemetry-collector.svc.cluster.local:4317"
