--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -160,3 +160,14 @@ jobs:
         uses: docker://ghcr.io/yannh/kubeconform:latest
         with:
           args: "-ignore-missing-schemas -strict -summary manifests-head.yaml"
+
+  failed:
+    runs-on: ubuntu-latest
+    needs: lint
+    if: failure()
+    steps:
+      - name: Send GitHub Action trigger data to Slack workflow
+        id: slack
+        uses: slackapi/slack-github-action@v1.26.0
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
