--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -169,5 +169,7 @@ jobs:
       - name: Send GitHub Action trigger data to Slack workflow
         id: slack
         uses: slackapi/slack-github-action@v1.26.0
+        with:
+          slack-message: "Failed to lint manifests-head.yaml"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
