--- a/k8s/apps/oekaki-dengon-game/back/deployment.yaml
+++ b/k8s/apps/oekaki-dengon-game/back/deployment.yaml
@@ -14,7 +14,7 @@ spec:
       labels:
         app: oekaki-dengon-game-back
       annotations:
-        instrumentation.opentelemetry.io/inject-go: "opentelemetry-collector/default"
+        instrumentation.opentelemetry.io/inject-go: 'opentelemetry-collector/default'
     spec:
       containers:
       - name: oekaki-dengon-game-back
