--- a/k8s/apps/opentelemetry-operator/helm.yaml
+++ b/k8s/apps/opentelemetry-operator/helm.yaml
@@ -18,3 +18,6 @@ spec:
     manager:
       collectorImage:
         repository: "otel/opentelemetry-collector-k8s"
+      extraArgs:
+      - --enable-go-instrumentation=true
+      - --enable-nginx-instrumentation=true
