--- a/renovate.json5
+++ b/renovate.json5
@@ -14,8 +14,7 @@
       matchStringsStrategy: "combination",
       matchStrings: [
         '  url: "?(?<registryUrl>\\S+)"?\\s*',
-        '      chart: "?(?<depName>[a-z0-9-]+)"?\\s*',
-        '      version: "?(?<currentValue>\\S+)"?\\s*',
+        '      chart: "?(?<depName>[a-z0-9-]+)"?\\s*\n      version: "?(?<currentValue>\\S+)"?\\s*',
       ],
       datasourceTemplate: "helm",
     },
