--- a/k8s/apps/openobserve/helm.yaml
+++ b/k8s/apps/openobserve/helm.yaml
@@ -38,6 +38,7 @@ spec:
           key: ZO_ROOT_USER_PASSWORD
 
     config:
+      ZO_LOCAL_MODE_STORAGE: "s3"
       ZO_S3_PROVIDER: "minio"
       ZO_S3_SERVER_URL: "https://minio.walnuts.dev"
       ZO_S3_REGION_NAME: "ap-northeast-1"
